--- a/get_windows.ipynb
+++ b/get_windows.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -17,12 +16,17 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
@@ -30,16 +34,21 @@
     "from tqdm import tqdm\n",
     "import spacy\n",
     "from gensim import corpora, models\n",
-    "\n",
+    "import pandas as pd\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "from utils import preprocess, get_windows"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "MIN_COUNTS = 20\n",
@@ -56,51 +65,72 @@
     "# half the size of the context around a word\n",
     "HALF_WINDOW_SIZE = 5\n",
     "# it must be that 2*HALF_WINDOW_SIZE < MIN_LENGTH"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Load NLP model"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "nlp = spacy.load('en_core_web_sm')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Load dataset"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 25,
    "outputs": [],
    "source": [
-    "dataset = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))\n",
-    "docs = dataset['data']"
-   ]
+    "rvData = pd.read_csv(\"reviews.csv\")\n",
+    "# pre-processing\n",
+    "rvData['cleanReviews'] = rvData['reviews'].str.replace(\"[^a-zA-Z#]\", \" \") # remove special characters\n",
+    "docs = rvData['reviews']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "18846"
+      "text/plain": "1867"
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,50 +138,60 @@
    "source": [
     "# number of documents\n",
     "len(docs)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# store an index with a document\n",
     "docs = [(i, doc) for i, doc in enumerate(docs)]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Preprocess dataset and create windows"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 18846/18846 [10:38<00:00, 29.52it/s]\n"
+      "100%|██████████| 1867/1867 [00:33<00:00, 56.32it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of removed short documents: 3975\n",
-      "total number of tokens: 1442761\n",
-      "number of tokens to be removed: 417459\n",
-      "number of additionally removed short documents: 2185\n",
-      "total number of tokens: 1000435\n",
+      "number of removed short documents: 517\n",
+      "total number of tokens: 69224\n",
+      "number of tokens to be removed: 18242\n",
+      "number of additionally removed short documents: 200\n",
+      "total number of tokens: 48585\n",
       "\n",
-      "minimum word count number: 15\n",
+      "minimum word count number: 16\n",
       "this number can be less than MIN_COUNTS because of document removal\n"
      ]
     }
@@ -160,31 +200,39 @@
     "encoded_docs, decoder, word_counts = preprocess(\n",
     "    docs, nlp, MIN_LENGTH, MIN_COUNTS, MAX_COUNTS\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# new ids will be created for the documents.\n",
     "# create a way of restoring initial ids:\n",
     "doc_decoder = {i: doc_id for i, (doc_id, doc) in enumerate(encoded_docs)}"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12686it [00:01, 7514.94it/s]\n"
+      "1150it [00:00, 9826.09it/s]\n"
      ]
     }
    ],
@@ -199,18 +247,23 @@
     "    data += [[index, w[0]] + w[1] for w in windows]\n",
     "\n",
     "data = np.array(data, dtype='int64')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "12"
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,18 +273,23 @@
     "# id of a document, id of a word in this document, a window around this word\n",
     "# 1 + 1 + 10\n",
     "data.shape[1]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
-      "text/plain": "1000435"
+      "text/plain": "48585"
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,42 +297,56 @@
    "source": [
     "# number of windows (equals to the total number of tokens)\n",
     "data.shape[0]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Get unigram distribution"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "word_counts = np.array(word_counts)\n",
     "unigram_distribution = word_counts/sum(word_counts)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Prepare word vectors"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9min 27s\n"
+      "Wall time: 17.5 s\n"
      ]
     }
    ],
@@ -291,18 +363,23 @@
     "word_vectors = np.zeros((vocab_size, embedding_dim)).astype('float32')\n",
     "for i in decoder:\n",
     "    word_vectors[i] = model.wv[str(i)]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
-      "text/plain": "7863"
+      "text/plain": "522"
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,40 +387,48 @@
    "source": [
     "# number of unique words\n",
     "vocab_size"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
    "source": [
     "# Prepare initialization for document weights"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "texts = [[decoder[j] for j in doc] for i, doc in encoded_docs]\n",
     "dictionary = corpora.Dictionary(texts)\n",
     "corpus = [dictionary.doc2bow(text) for text in texts]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 8.44 s\n"
+      "Wall time: 1.15 s\n"
      ]
     }
    ],
@@ -352,60 +437,70 @@
     "n_topics = 25\n",
     "lda = models.LdaModel(corpus, alpha=0.9, id2word=dictionary, num_topics=n_topics)\n",
     "corpus_lda = lda[corpus]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "topic 0 : food taste eat MSG lot Serbs sure little place Muslims\n",
-      "topic 1 : fire FBI shoot kill tank weapon Koresh attack report child\n",
-      "topic 2 : law public President encryption gun state firearm private job chip\n",
-      "topic 3 : New cover appear book price Turkey Press copy York art\n",
-      "topic 4 : pin latch modem input jumper logic current slave Symbol connect\n",
-      "topic 5 : probably idea lot chip sure pretty far hear order ago\n",
-      "topic 6 : University gun article Wright Professor rate quote study crime James\n",
-      "topic 7 : research science age group Center material National service scientific conference\n",
-      "topic 8 : evidence reason cause mind bad life claim happen answer course\n",
-      "topic 9 : space launch Earth orbit NASA planet satellite mission solar Space\n",
-      "topic 10 : Mary probably great happen bad far sure Latest end place\n",
-      "topic 11 : bike battery engine bad buy sure ride bit light little\n",
-      "topic 12 : man Jesus Christ Lord armenian turkish Armenians child greek sin\n",
-      "topic 13 : card disk driver color Windows software board monitor controller Mac\n",
-      "topic 14 : Yassin Deir pay computer sure price maybe scare place sell\n",
-      "topic 15 : window user version application list mail server display software code\n",
-      "topic 16 : Israel Jews israeli jewish arab country war state peace attack\n",
-      "topic 17 : belief religion Bible word church atheist argument evidence claim faith\n",
-      "topic 18 : Kinsey drug patient child report cause disease treatment increase health\n",
-      "topic 19 : section error bit echo build entry copy input output DOS\n",
-      "topic 20 : car buy leave door old happen hear live home turn\n",
-      "topic 21 : wire ground power circuit cable box ADL wiring outlet neutral\n",
-      "topic 22 : pitch win hit pitcher lot average team fan baseball guy\n",
-      "topic 23 : team play player season win NHL score goal period hockey\n",
-      "topic 24 : RIPEM message detector DES PGP radar bit distribution public PEM\n"
+      "topic 0 : play family hacker get share account online item like way\n",
+      "topic 1 : play family get hacker item account online cheater share like\n",
+      "topic 2 : play family online get hacker item like share way Souls\n",
+      "topic 3 : play family hacker online get share account character way like\n",
+      "topic 4 : play family get online share hacker good like cause cheater\n",
+      "topic 5 : play get family item hacker share cheater like way account\n",
+      "topic 6 : play get family cheater way share player online item hacker\n",
+      "topic 7 : play family share hacker account get item time cheater player\n",
+      "topic 8 : play get family item hacker like account share player cheat\n",
+      "topic 9 : play way account item share hacker family get people cheat\n",
+      "topic 10 : play share hacker family get account like cheater online cause\n",
+      "topic 11 : play hacker share family time account item get online player\n",
+      "topic 12 : play get family item hacker like player way account share\n",
+      "topic 13 : play get family hacker good player item like share way\n",
+      "topic 14 : play family hacker get account share online cheater like way\n",
+      "topic 15 : play family get share hacker account online way item like\n",
+      "topic 16 : play get family hacker account like item way share player\n",
+      "topic 17 : play hacker online share family get account player like item\n",
+      "topic 18 : play get hacker share family item account way like online\n",
+      "topic 19 : play get hacker family like account item cause player share\n",
+      "topic 20 : play family get player hacker way item account time people\n",
+      "topic 21 : play get family hacker account online share cheater player like\n",
+      "topic 22 : play get like hacker share way item Dark family online\n",
+      "topic 23 : play get family hacker online share like item account time\n",
+      "topic 24 : play get family account online hacker share item cheater way\n"
      ]
     }
    ],
    "source": [
     "for i, topics in lda.show_topics(n_topics, formatted=False):\n",
     "    print('topic', i, ':', ' '.join([t for t, _ in topics]))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12686/12686 [00:07<00:00, 1679.65it/s]\n"
+      "100%|██████████| 1150/1150 [00:00<00:00, 1838.14it/s]\n"
      ]
     }
    ],
@@ -415,21 +510,26 @@
     "    topics = corpus_lda[i]\n",
     "    for j, prob in topics:\n",
     "        doc_weights_init[i, j] = prob"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Save data"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "np.save('data.npy', data)\n",
@@ -438,7 +538,13 @@
     "np.save('decoder.npy', decoder)\n",
     "np.save('doc_decoder.npy', doc_decoder)\n",
     "np.save('doc_weights_init.npy', doc_weights_init)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
